--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <br>
 <br>
 <br>
-<center>informationsecurity.cafe/center>
-<center><a href="https://www.namecheap.com/market/buynow/informationsecurity.cafe/">NameCheap Marketplace</a></center>
-<br>
-<br>
-<br>
-<center>informationsecuritycafe.com</center>
+<center>informationsecuritycafe.com/center>
 <center><a href="https://www.namecheap.com/market/buynow/informationsecuritycafe.com/">NameCheap Marketplace</a></center>
+<br>
+<br>
+<br>
+<center>informationsecurity.cafe</center>
+<center><a href="https://www.namecheap.com/market/buynow/informationsecurity.cafe/">NameCheap Marketplace</a></center>
 <br>
 <br>
 <br>
