--- a/index.html
+++ b/index.html
@@ -22,18 +22,13 @@
 <br>
 <br>
 <br>
-<center>DeeID.org</center>
-<center><a href="https://www.namecheap.com/market/buynow/deeid.org/">NameCheap Marketplace</a></center>
+<center>infosecville.com</center>
+<center><a href="https://www.namecheap.com/market/buynow/infosecville.com/">NameCheap Marketplace</a></center>
 <br>
 <br>
 <br>
-<center>DeeID.co</center>
-<center><a href="https://www.namecheap.com/market/buynow/deeid.co/">NameCheap Marketplace</a></center>
-<br>
-<br>
-<br>
-<center>DeeID.me</center>
-<center><a href="https://www.namecheap.com/market/buynow/deeid.me/">NameCheap Marketplace</a></center>
+<center>secretaryofai.com</center>
+<center><a href="https://www.namecheap.com/market/buynow/secretaryofai.com/">NameCheap Marketplace</a></center>
 <br>
 <br>
 <br>
