--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <br>
 <br>
 <br>
-<center>informationsecuritycafe.com/center>
+<center>informationsecuritycafe.com</center>
 <center><a href="https://www.namecheap.com/market/buynow/informationsecuritycafe.com/">NameCheap Marketplace</a></center>
 <br>
 <br>
