--- a/index.html
+++ b/index.html
@@ -8,27 +8,22 @@
 </header>	
 <body>
 <center><img src="ForSale.jpg" alt="Domain Names for sale"></center> 
-<center><h1>Domain Names for Sale</h1></center>
 <br>
 <br>
 <br>
-<center>informationsecuritycafe.com</center>
-<center><a href="https://www.namecheap.com/market/buynow/informationsecuritycafe.com/">NameCheap Marketplace</a></center>
+<center><a href="https://www.namecheap.com/market/buynow/informationsecuritycafe.com/"><h2><strong>InformationSecurityCafe.com</strong></h2></a></center>
 <br>
 <br>
 <br>
-<center>informationsecurity.cafe</center>
-<center><a href="https://www.namecheap.com/market/buynow/informationsecurity.cafe/">NameCheap Marketplace</a></center>
+<center><a href="https://www.namecheap.com/market/buynow/informationsecurity.cafe/"><h2><strong>InformationSecurity.cafe</strong></h2></a></center>
 <br>
 <br>
 <br>
-<center>infosecville.com</center>
-<center><a href="https://www.namecheap.com/market/buynow/infosecville.com/">NameCheap Marketplace</a></center>
+<center><a href="https://www.namecheap.com/market/buynow/infosecville.com/"><h2><strong>InfoSecVille.com</strong></h2></a></center>
 <br>
 <br>
 <br>
-<center>secretaryofai.com</center>
-<center><a href="https://www.namecheap.com/market/buynow/secretaryofai.com/">NameCheap Marketplace</a></center>
+<center><a href="https://www.namecheap.com/market/buynow/secretaryofai.com/"><h2><strong>SecretaryOfAI.com</strong></h2></a></center>
 <br>
 <br>
 <br>
